iac/main.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "web" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t3.micro"
  
  # ==================== CORREÇÃO AQUI ====================
  # Mudamos de 'security_groups' para 'vpc_security_group_ids' 
  # e puxamos o ID diretamente do recurso criado no seu sg.tf
  vpc_security_group_ids = [aws_security_group.posweb_myapp_2026_sg.id]
  # =======================================================

  user_data = base64encode(data.template_file.user_data.rendered)
  key_name  = "chaves_github"

  tags = {
    Name = "HelloWorld2"
  }
}
